0.4/_sources/api/skimage.io.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io`
=================
Inheritance diagram for ``skimage.io``:

.. inheritance-diagram:: skimage.io 
   :parts: 3

.. automodule:: skimage.io

.. currentmodule:: skimage.io

:class:`ImageCollection`
------------------------


.. autoclass:: ImageCollection
  :members:
  :undoc-members:
  :show-inheritance:
  :inherited-members:

  .. automethod:: __init__

:class:`MultiImage`
-------------------


.. autoclass:: MultiImage
  :members:
  :undoc-members:
  :show-inheritance:
  :inherited-members:

  .. automethod:: __init__

:class:`Video`
--------------


.. autoclass:: Video
  :members:
  :undoc-members:
  :show-inheritance:
  :inherited-members:

  .. automethod:: __init__
.. autosummary::

   skimage.io.imread
   skimage.io.imread_collection
   skimage.io.imsave
   skimage.io.imshow
   skimage.io.load_sift
   skimage.io.load_surf
   skimage.io.plugin_info
   skimage.io.plugins
   skimage.io.pop
   skimage.io.push
   skimage.io.show
   skimage.io.use_plugin

imread
------

.. autofunction:: skimage.io.imread

imread_collection
-----------------

.. autofunction:: skimage.io.imread_collection

imsave
------

.. autofunction:: skimage.io.imsave

imshow
------

.. autofunction:: skimage.io.imshow

load_sift
---------

.. autofunction:: skimage.io.load_sift

load_surf
---------

.. autofunction:: skimage.io.load_surf

plugin_info
-----------

.. autofunction:: skimage.io.plugin_info

plugins
-------

.. autofunction:: skimage.io.plugins

pop
---

.. autofunction:: skimage.io.pop

push
----

.. autofunction:: skimage.io.push

show
----

.. autofunction:: skimage.io.show

use_plugin
----------

.. autofunction:: skimage.io.use_plugin

