0.10.x/_sources/api/skimage.io.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io`
=================
.. automodule:: skimage.io

.. currentmodule:: skimage.io

:class:`Image`
--------------


.. autoclass:: Image
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`ImageCollection`
------------------------


.. autoclass:: ImageCollection
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`MultiImage`
-------------------


.. autoclass:: MultiImage
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__
.. autosummary::

   skimage.io.call_plugin
   skimage.io.concatenate_images
   skimage.io.find_available_plugins
   skimage.io.imread
   skimage.io.imread_collection
   skimage.io.imread_collection_wrapper
   skimage.io.imsave
   skimage.io.imshow
   skimage.io.load_sift
   skimage.io.load_surf
   skimage.io.plugin_info
   skimage.io.plugin_order
   skimage.io.pop
   skimage.io.push
   skimage.io.reset_plugins
   skimage.io.show
   skimage.io.use_plugin

call_plugin
-----------

.. autofunction:: skimage.io.call_plugin

concatenate_images
------------------

.. autofunction:: skimage.io.concatenate_images

find_available_plugins
----------------------

.. autofunction:: skimage.io.find_available_plugins

imread
------

.. autofunction:: skimage.io.imread

imread_collection
-----------------

.. autofunction:: skimage.io.imread_collection

imread_collection_wrapper
-------------------------

.. autofunction:: skimage.io.imread_collection_wrapper

imsave
------

.. autofunction:: skimage.io.imsave

imshow
------

.. autofunction:: skimage.io.imshow

load_sift
---------

.. autofunction:: skimage.io.load_sift

load_surf
---------

.. autofunction:: skimage.io.load_surf

plugin_info
-----------

.. autofunction:: skimage.io.plugin_info

plugin_order
------------

.. autofunction:: skimage.io.plugin_order

pop
---

.. autofunction:: skimage.io.pop

push
----

.. autofunction:: skimage.io.push

reset_plugins
-------------

.. autofunction:: skimage.io.reset_plugins

show
----

.. autofunction:: skimage.io.show

use_plugin
----------

.. autofunction:: skimage.io.use_plugin

